[tool.poetry]
name = "chatgpt and gemini apis requests"
version = "0.1.0"
description = ""
authors = ["Vasile Ciorna"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
openai = "^1.36.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
